--- a/package.json
+++ b/package.json
@@ -6,34 +6,40 @@
   "type": "module",
   "scripts": {
     "lint": "eslint --fix",
+    "test": "jest",
     "start": "node dist/bundle.js",
-    "start:prod": "node --loader ts-node/esm node_modules/webpack-cli/bin/cli.js --config webpack.config.ts && npm start",
+    "start:prod": "node --no-warnings=ExperimentalWarning --loader ts-node/esm node_modules/webpack-cli/bin/cli.js --config webpack.config.ts && npm start",
     "start:dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.7.5",
-    "@types/uuid": "^10.0.0",
-    "@types/webpack": "^5.28.5",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "@types/jest": "^29.5.3",
+    "@types/node": "=22.7.5",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "=10.0.0",
+    "@types/webpack": "=5.28.5",
+    "@typescript-eslint/eslint-plugin": "=8.8.1",
+    "@typescript-eslint/parser": "=8.8.1",
+    "eslint": "=9.12.0",
+    "eslint-config-prettier": "=9.1.0",
+    "eslint-plugin-prettier": "=5.2.1",
+    "jest": "^29.6.2",
+    "nodemon": "=3.1.7",
+    "prettier": "=3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "=9.5.1",
+    "ts-node": "=10.9.2",
+    "ts-node-dev": "=2.0.0",
+    "typescript": "=5.6.3",
+    "webpack": "=5.95.0",
+    "webpack-cli": "=5.1.4"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "uuid": "^10.0.0"
+    "cross-env": "=7.0.3",
+    "dotenv": "=16.4.5",
+    "uuid": "=10.0.0"
   }
 }
